Fix header on smaller screens

--- a/components/header.module.css
+++ b/components/header.module.css
@@ -25,24 +25,30 @@
 
 .avatar {
   border-radius: 2rem;
-  display: block;
+  display: none;
   height: 3.25rem;
   width: 3.25rem;
   /* box-shadow: inset 0 0 30px 0px white; */
   padding: 0.25rem;
+  /* padding-right: 0; */
   /* background-size: 10px; */
   border: 1px solid #333;
-
   filter: opacity(0.9) saturate(0.5);
   /* padding: 1rem; */
   /* background-color: white; */
   /* background-size: 1rem 1rem; */
   background-repeat: no-repeat;
   background-size: 3.5rem;
-  margin-right: 1.5rem;
+  /* margin-right: 1.5rem; */
   background-clip: content-box;
   transition: all 0.2s ease-in;
   will-change: border, filter;
+}
+@media (min-width: 500px) {
+  .avatar {
+    display: block;
+    margin-left: 1rem;
+  }
 }
 
 .avatar:hover {
@@ -55,14 +61,14 @@
   font-weight: 500;
   /* border-radius: 0.3rem; */
   /* margin-right: 0.9rem; */
-  width: 95px;
+  width: 25%;
   display: block;
   border: 1px solid transparent;
   /* border-bottom: 1px solid #66788a; */
   text-align: right;
   /* display: flex; */
   /* align-content: center; */
-  padding: 0.2rem 0.5rem;
+
   cursor: pointer;
   font-size: 1rem;
   /* line-height: 1rem; */
@@ -111,10 +117,7 @@
   display: inherit;
   z-index: 1;
   line-height: 1.3rem;
-  /* border: 1px solid rgba(67, 90, 111, 0.3); */
   border-top: 0;
-  /* border-radius: 0 0px 6px 6px; */
-  /* background: #f7f9fd; */
 }
 .header nav {
   /* margin-bottom: 2rem; */
@@ -125,16 +128,21 @@
   /* border-bottom: 1px solid #ccc; */
   align-items: center;
   padding: 1rem 0rem;
-  /* box-shadow: rgba(65, 78, 101, 0.05) 0px 24px 32px 0px,
-    rgba(65, 78, 101, 0.01) 0px 16px 16px 0px,
-    rgba(65, 78, 101, 0.01) 0px 8px 8px 0px,
-    rgba(65, 78, 101, 0.01) 0px 4px 4px 0px,
-    rgba(65, 78, 101, 0.02) 0px 2px 2px 0px; */
 }
 
 .nav-bar-left {
   align-items: center;
   display: flex;
+}
+
+.nav-bar-right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.nav-bar-right * ~ * {
+  margin-left: 2rem;
 }
 
 .navItems {
@@ -151,12 +159,16 @@
   padding-left: 0;
 }
 
+/* .navItems li:last-of-type {
+  padding-right: 0;
+} */
+
 .navItems a {
   font-weight: 800;
 }
 
 .navItem {
-  width: 95px;
+  width: 40%;
   display: block;
   border: 1px solid transparent;
   padding: 0.5rem 1rem;
